# machado

./: .env.example  .flake8  .gitignore  docker-compose.dev.yaml  machado.conf  main.py  makefile  pyproject.toml  readme.dev.md  readme.md  requirements.txt  setup.py
log/: config.py
machado/: __main__.py  cli.py  init-db.yaml  parser.py
machado/base/: column.py
machado/commands/: apply.py  conf_example.py  new.py  test.py
machado/config/: initialize_env.py  migration_metadata.py  migration_order.py  migrations_order.py  parser.py  run_migration.py
machado/database/: connection.py  init-db.yaml  parse_yaml.py
machado/log/: config.py
machado/sql/base/: __init__.py  column.py  table.py
machado/sql/instructions/: drop.py
machado/sql/types/: bool.py  varchar.py
machado/templates/: machado.conf  machado.example.conf  new_migration.py  new_migration.sql  new_rollback.py  new_rollback.sql
machado/tests/: test_main.py
machado/types/: __init__.py  integer.py  numeric.py
machado/utils/: env_var.py  path_config.py
tests/: test_main.py
