[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "machado"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mccabe>=0.7.0",
    "pep8-naming>=0.14.1",
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "black>=25.1.0",
    "shortuuid>=1.0.13"
]

[project.scripts]
machado = "machado.cli:main"

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | migrations
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3